fixed some issues

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Text utils is an app used to give you ease to manipulate your text"
+      content="Text utils is an word count and character counting app used to give you ease to manipulate your text"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <!--
